# ChromoFold

./: README.md
3D Graph/: README copy.md  pyproject.toml
3D Graph/data/: labels.csv
3D Graph/docs/superpowers/plans/: 2026-04-29-fp-gnn-pipeline.md
3D Graph/docs/superpowers/specs/: 2026-04-29-fp-gnn-pipeline-design.md
3D Graph/src/fp_gnn/: dataset.py  model.py
3D_Graph/: README.md
3D_Graph/data/: labels.csv  labels2.csv
3D_Graph/data/processed/processed/: data.pt
3D_Graph/logs/model_a/version_0/: metrics.csv
3D_Graph/src/fp_gnn/: chromophore_graph.py  pdb_io.py  protein_graph.py  train.py
