[project]
name = "fp-gnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Lucas Braz", email = "l.braz@instadeep.com" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.3",
    "ogb>=1.3.6",
    "pandas>=3.0.2",
    "pytorch-lightning>=2.6.1",
    "rdkit>=2026.3.1",
    "requests>=2.28.1",
    "torch>=2.11.0",
    "torch-geometric>=2.7.0",
]

[project.scripts]
fp-gnn = "fp_gnn.train:main"

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
